--- a/public/index.html
+++ b/public/index.html
@@ -125,15 +125,7 @@
         var dataSource = {
                 datasets: [{
                     data: [],
-                    backgroundColor: [
-                        'rgb(132, 227, 200)',
-                        'rgb(168, 230, 207)',
-                        'rgb(220, 237, 193)',
-                        'rgb(255, 211, 182)',
-                        'rgb(255, 170, 165)',
-                        'rgb(255, 139, 148)',
-                        'rgb(255, 116, 128)'
-                    ]
+                    backgroundColor: []
                 }],
                 labels: [
                 ]
@@ -147,12 +139,15 @@ function createChart() {
     function getBudget() {
             axios.get('/budget')
             .then(function (res){
-                var d3jsdata = res.data.myBudget.map((data) =>({label : data.title, value : data.budget}))
+                var d3jsdata = res.data.myBudget.map((data) =>({label : data.title, value : data.budget, color:data.color}))
                 console.log(res.data);
                 console.log(res.data.myBudget.length)
                 for(var i = 0; i < res.data.myBudget.length; i++){
                     dataSource.datasets[0].data[i] = res.data.myBudget[i].budget;
+                    dataSource.datasets[0].backgroundColor[i] = res.data.myBudget[i].color;
+                    
                     dataSource.labels[i] = res.data.myBudget[i].title;
+
                 }
                 createChart();
                 change(d3jsdata);
@@ -194,9 +189,7 @@ var svg = d3.select("body")
 
     var key = function(d){ return d.data.label; };
 
-    var color = d3.scale.ordinal()
-        .range(["#BCF4DE", "#CDE5D7", "#DED6D1", "#EEC6CA", "#FFB7C3", "#fae1dd", "#d8e2dc"]);
-
+    
     function change(data) {
 
         /* ------- PIE SLICES -------*/
@@ -205,7 +198,9 @@ var svg = d3.select("body")
 
         slice.enter()
             .insert("path")
-            .style("fill", function(d) { return color(d.data.label); })
+            .style("fill", function(d) { console.log(
+                d.data.color);
+                return d.data.color; })
             .attr("class", "slice");
 
         slice		
